--- a/css/style.css
+++ b/css/style.css
@@ -1,217 +1,220 @@
-body
-{
-	background-image: url("images/register1.jpg");
-	background-repeat: no-repeat;
-	background-size: cover;
+* {
+    margin: 0;
+    padding: 0;
 }
-header
-{
-	min-height: 35vh;
-	width: 100%;
-	background-color: #f7f7f7;
-	
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    line-height: 1.5;
+    font-weight: 400;
+    color: #282828;
+    display: block;
+    max-height: 100%;
 }
-nav
-{
-	display: flex;
-	padding: 1% 1%;
-	justify-content: space-between;
-	align-items: center;
+img {
+    max-width: 100%;
 }
-nav img{
-	width: 150px;
+li {
+    list-style-type: none;
+    display: inline;
 }
-.nav-links{
-	flex: 1;
-	text-align: right;
+a {
+    text-decoration: none;
+    color: #282828;
 }
-.nav-links ul li{
-	list-style: none;
-	display: inline-block;
-	padding: 8px 12px;
-	position: relative;
+header {
+    width: 100%;
+    background-color: #f7f7f7;
 }
-.nav-links ul li a{
-	color: black;
-	text-decoration: none;
-	font-size: 13px;
+.container{
+    display: block;
+    margin: auto;
 }
-.nav-links ul li::after{
-	content: '';
-	width: 0%;
-	height: 2px;
-	background: red;
-	display: block;
-	margin: auto;
-	transition: 0.5s;
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 50px; 
 }
-.nav-links ul li:hover::after{
-	width: 100%;
+.header-logo {
+    height: 100%;
+    width: 70px;
 }
-.text-box
-{
-	
-	background-color: #db050c;
-	width: 100%;
-	height: 100%;
+.nav-links {
+    list-style: none;
+    display: inline-block;
+    position: relative;
+    margin: 0px 10px;
+    cursor: pointer;
 }
-.text-box h1
-{
-	font-size: 40px;
-	text-shadow: 0px 0px 10px rgba(0,0,0,0.3);
-	color: #ffffffcc;
-	text-align: center;
-	font-family: Bebas Regular;
+.nav-links a {
+    color: black;
+    text-decoration: none;
+    font-weight: 500;
 }
-.text-box p 
-{
-	font-size: 15px;
-	color: white;
-	text-align: center;
-	font-family:opensans-bold , sans-serif;
+.navbar ul .nav-links::after {
+    content: '';
+    width: 0%;
+    height: 2px;
+    background: red;
+    display: block;
+    margin: auto;
+    transition: 0.2s;
 }
-.text-box a
-{
-	    color: white;
+.navbar ul .nav-links:hover::after {
+    width: 100%;
+}
+.main-section {
+    background-color: #db050c;
+    padding: 50px;
+    height: 100vh;
+}
+.main-section h1 {
+    font-size: 40px;
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    color: #ffffffcc;
+    text-align: center;
+}
+.main-section p {
+    font-size: 15px;
+    color: white;
+    text-align: center;
+}
+.main-section a {
+    color: white;
     display: inline-block;
     text-decoration: none;
     background: transparent;
     border: 1px solid white;
     padding: 10px 30px;
-    margin-left: 595px;
-    margin-right: -555px;
-    margin-bottom: 20px;
     text-align: center;
+    margin: 10px;
 }
-.text-box a:hover
-{
-   border: 1px #f38881;
-   background: #f38881;
-   transition: 1s;
+.main-section a:hover {
+    border: 1px #f38881;
+    background: #f38881;
+    transition: 1s;
 }
-.about
+.main-section-btn
 {
-	background-color: #f7f7f7;
+    margin: auto;
+    display: flex;
+    justify-content: center;
 }
-.about h1
-{
-	font-size: 20px;
-	text-align: center;
-	color: red;
+.about {
+    background-color: #f7f7f7;
 }
-.about p 
-{
-	font-size: 13px;
-	text-align: center;
-	color: black;
-	font-family:opensans-bold , sans-serif;
+.about h1 {
+    font-size: 20px;
+    text-align: center;
+    color: red;
 }
-.about a 
-{
-	color: black;
-	display: inline-block;
-	text-decoration: none;
-	background: transparent;
-	border: 1px solid red;
-	padding: 12px 30px;
-	margin-left: 684px;
+
+.about p {
+    font-size: 13px;
+    text-align: center;
+    color: black;
+}
+
+.about a {
+    color: black;
+    display: inline-block;
+    text-decoration: none;
+    background: transparent;
+    border: 1px solid red;
+    padding: 12px 30px;
+    margin-left: 684px;
     margin-bottom: 10px;
     border-radius: 5px;
 }
-.about a:hover
-{
-   border: 1px #f38881;
-   background: #f38881;
-   transition: 1s;
+
+.about a:hover {
+    border: 1px #f38881;
+    background: #f38881;
+    transition: 1s;
 }
-.search
-{
-	background-color: #f7f7f7;
+
+.search {
+    background-color: #f7f7f7;
 }
-.search h1
-{
-	font-size: 20px;
-	text-align: center;
-	color: red;
+
+.search h1 {
+    font-size: 20px;
+    text-align: center;
+    color: red;
 }
-.search button 
-{
-	color: black;
-	background: transparent;
-	text-decoration: none;
+
+.search button {
+    color: black;
+    background: transparent;
+    text-decoration: none;
 }
-.search button:hover
-{
-	border 1px black;
-	background: red;
-	transition: 1s;
+.search button:hover {
+    border: 1px solid black;
+    background: red;
+    transition: 1s;
 }
-.about
-{
-	background-color: #f25454ed;
-	border-radius: 10px 140px 30px 140px;
+.about {
+    background-color: #f25454ed;
+    border-radius: 10px 140px 30px 140px;
 }
-.about h1
-{
-	font-size: 30px;
-	text-align: left;
-	color: white;
-	margin-left: 45px;
+.about h1 {
+    font-size: 30px;
+    text-align: left;
+    color: white;
+    margin-left: 45px;
     margin-bottom: -15px;
 }
-.about p 
-{
-	font-size: 13px;
-	text-align: left;
-	color: white;
-	font-family:opensans-bold , sans-serif;
-	padding: 10px;
-	margin-left: 37px;
+.about p {
+    font-size: 13px;
+    text-align: left;
+    color: white;
+    padding: 10px;
+    margin-left: 37px;
 }
-.expln
-{
-	background-image: url("images/about1.jpg");
-	width: 100%;
-	height: 100%;
-   background-repeat: repeat-y;
+.expln {
+    background-image: url("images/about1.jpg");
+    width: 100%;
+    height: 100%;
+    background-repeat: repeat-y;
 }
-.expln h2
-{
-	margin: 10px;
-	color: white;
-	font-size: 30px;
-	text-align: left;
+
+.expln h2 {
+    margin: 10px;
+    color: white;
+    font-size: 30px;
+    text-align: left;
 }
-.expln p 
-{
-	margin: 10px;
-	padding: 5px;
-	color: white;
-	font-size: 13px;
-	text-align: left;
+
+.expln p {
+    margin: 10px;
+    padding: 5px;
+    color: white;
+    font-size: 13px;
+    text-align: left;
 }
-.expln h3
-{
-	color: white;
-	margin: 10px;
-	padding: 5px;
+
+.expln h3 {
+    color: white;
+    margin: 10px;
+    padding: 5px;
 }
-.expln ol 
-{
-	color: white;
-	font-size: 15px;
-	margin: 10px;
-	padding-top: 0px;
+
+.expln ol {
+    color: white;
+    font-size: 15px;
+    margin: 10px;
+    padding-top: 0px;
     padding-bottom: 13px;
 }
-.blood
-{
-	background-image: url("images/about3.jpg");
+
+.blood {
+    background-image: url("../images/about3.jpg");
     background-repeat: no-repeat;
 }
-.blood h1
-{
-	    color: white;
+
+.blood h1 {
+    color: white;
     font-size: 56px;
     text-align: center;
     padding-top: 42px;
@@ -219,67 +222,67 @@ nav img{
     /* margin-bottom: 410px; */
     padding-bottom: 410px;
 }
-.blood h1 p
-{
-	    font-size: 15px;
+
+.blood h1 p {
+    font-size: 15px;
     text-align: left;
     padding: 20px;
     padding-top: 200px;
     color: red;
 }
-.blood p
-{
-	    padding-right: 21px;
+
+.blood p {
+    padding-right: 21px;
     padding-left: 158px;
 }
-.register
-{
-	background-color: #f25454ed;
-	border-radius: 10px 140px 30px 140px;
+
+.register {
+    background-color: #f25454ed;
+    border-radius: 10px 140px 30px 140px;
 
 }
-.register h1
-{
-	text-align: center;
-	font-size: 30px;
-	color: white;
+
+.register h1 {
+    text-align: center;
+    font-size: 30px;
+    color: white;
 }
-.register p 
-{
-	text-align: center;
-	font-size: 13px;
-	color: white;
-	padding-bottom: 10px;
-	font-family: opensans-bold , sans-serif;
+
+.register p {
+    text-align: center;
+    font-size: 13px;
+    color: white;
+    padding-bottom: 10px;
+    font-family: opensans-bold, sans-serif;
 }
-.body
-{
-	width: 350px;
+
+.body {
+    width: 350px;
     padding: 10px;
     margin: auto;
     border: 2px solid red;
-	margin-bottom: 10px;
+    margin-bottom: 10px;
 }
-.body h2
-{
-	color: #b90000;
-	text-align: center;
+
+.body h2 {
+    color: #b90000;
+    text-align: center;
 }
-.inpuT input
-{
-	   padding-top: 8px;
-	   padding-bottom: 8px;
-	   margin-bottom: 10px;
-	   width: 99%;
-	   border: 1px solid red;
+
+.inpuT input {
+    padding-top: 8px;
+    padding-bottom: 8px;
+    margin-bottom: 10px;
+    width: 99%;
+    border: 1px solid red;
 }
-.body button
-{
-	color: #b90000;
-	text-align: center;
-	padding-top: 8px;
-	   padding-bottom: 8px;
-	   margin-bottom: 10px;
-	   width: 99%;
-	   border: 1px solid red;
+
+.body button {
+    color: #b90000;
+    text-align: center;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    margin-bottom: 10px;
+    width: 99%;
+    border: 1px solid red;
 }
