--- a/css/style.css
+++ b/css/style.css
@@ -64,42 +64,49 @@ header {
 .navbar ul .nav-links:hover::after {
     width: 100%;
 }
+
 .main-section {
-    background-color: #db050c;
-    padding: 50px;
+    background-image: url("../images/bg-back.jpeg");
+    background-size: cover;
     height: 100vh;
+}
+.main-box{
+    justify-content: start;
+    float: left;
+    display: block;
+    height: 100%;
+    margin: 100px;
+    width: 40%;
+    padding-top: 50px;
 }
 .main-section h1 {
     font-size: 40px;
-    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
-    color: #ffffffcc;
-    text-align: center;
+    text-shadow: 0px 0px 10px rgba(79, 79, 79, 0.28);
+    color: #b92b27;
+    text-transform: uppercase;
 }
 .main-section p {
     font-size: 15px;
-    color: white;
-    text-align: center;
+    color: #3e3434;
+    margin: 20px 0px;
 }
 .main-section a {
-    color: white;
+    color: #b92b27;
     display: inline-block;
     text-decoration: none;
     background: transparent;
-    border: 1px solid white;
+    border: 1px solid #b92b27;
     padding: 10px 30px;
-    text-align: center;
-    margin: 10px;
 }
 .main-section a:hover {
-    border: 1px #f38881;
-    background: #f38881;
-    transition: 1s;
+    border: 1px red;
+    background: red;
+    color: white;
+    transition: 0.5s;
 }
 .main-section-btn
 {
     margin: auto;
-    display: flex;
-    justify-content: center;
 }
 .about {
     background-color: #f7f7f7;
@@ -173,7 +180,7 @@ header {
     margin-left: 37px;
 }
 .expln {
-    background-image: url("images/about1.jpg");
+    background-image: url("./images/about1.jpg");
     width: 100%;
     height: 100%;
     background-repeat: repeat-y;
