--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ a {
 header {
     width: 100%;
     background-color: #f7f7f7;
+    border-bottom: 2px solid #d4060d;
 }
 .container{
     display: block;
@@ -180,12 +181,10 @@ header {
     margin-left: 37px;
 }
 .expln {
-    background-image: url("./images/about1.jpg");
-    width: 100%;
-    height: 100%;
+    background-image: url("../images/register1.jpg");
+    background-size: cover;
     background-repeat: repeat-y;
 }
-
 .expln h2 {
     margin: 10px;
     color: white;
@@ -242,13 +241,11 @@ header {
     padding-right: 21px;
     padding-left: 158px;
 }
-
 .register {
     background-color: #f25454ed;
     border-radius: 10px 140px 30px 140px;
 
 }
-
 .register h1 {
     text-align: center;
     font-size: 30px;
@@ -263,33 +260,64 @@ header {
     font-family: opensans-bold, sans-serif;
 }
 
-.body {
-    width: 350px;
-    padding: 10px;
+.register-form {
+    padding: 20px;
     margin: auto;
-    border: 2px solid red;
-    margin-bottom: 10px;
+    border: 2px solid rgba(255, 0, 0, 0.567);
+    overflow: hidden;
+    display: block;
+    width: 38%;
+    border-radius: 10px;
+    margin-top: 100px;
 }
-
-.body h2 {
-    color: #b90000;
+.register-form h2 {
+    color: #b90000 ;
     text-align: center;
 }
-
-.inpuT input {
+.input-group{
+    display: flex;
+    max-width: 100%;
+}
+.input-group-full
+{
+    padding-right: 25px;
+}
+.input-field
+{
+    display: contents;
+}
+.input-field input{
+    display: inline;
+    border: 1px solid red;
+    padding: 10px 10px;
+    margin: 10px;
+    width: 99%;
+    margin-left: 0px;
+    border-radius: 1px;
+    border-radius: 100px;
+}
+.input-group-full .input-field {
+    border: 1px solid red;
+    padding: 10px 10px;
+    margin: 10px 0px;
+    display: table-column;
+    border-radius: 100px;
+    display: flex;
+    width: 100%;
+}
+.input-field input::focus-visible{
+    border-color: #b92b27 !important;
+    outline: none;
+    border: none;
+    box-shadow: none;
+}
+.register-form button {
+    color: #b90000;
+    text-align: center;
     padding-top: 8px;
     padding-bottom: 8px;
     margin-bottom: 10px;
-    width: 99%;
+    width: 98%;
     border: 1px solid red;
-}
-
-.body button {
-    color: #b90000;
-    text-align: center;
-    padding-top: 8px;
-    padding-bottom: 8px;
-    margin-bottom: 10px;
-    width: 99%;
-    border: 1px solid red;
+    border-radius: 100px;
 }
